avoid forms to overflow talk container

--- a/css/talk.css
+++ b/css/talk.css
@@ -123,6 +123,10 @@
    padding-top: 25px;
 }
 
+.talk_box .tab_cadre_fixe {
+   width: 930px;
+}
+
 
 /** TIMELINE **/
 
